<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/compare_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_one"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/compare_et1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_first_message">

    </EditText>

    <TextView
        android:id="@+id/compare_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_two"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/compare_et2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_second_message" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/compare"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:contentDescription="@string/compare"
            android:onClick="compareresult_click"
            android:src="@android:drawable/ic_search_category_default" />

        <ImageButton
            android:id="@+id/back2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:contentDescription="@string/Back"
            android:onClick="back"
            android:src="@android:drawable/ic_menu_revert" />

    </LinearLayout>

    <TextView
        android:id="@+id/compare_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>